--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 description = ""
 authors = ["tefuna <tefuna@gmail.com>"]
 readme = "README.md"
-packages = [{include = "comic_completion"}]
+packages = [{ include = "comic_completion" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -18,9 +19,17 @@ isort = "^5.12.0"
 pytest = "^7.3.2"
 pytest-cov = "^4.1.0"
 sphinx = "^7.0.1"
+taskipy = "^1.11.0"
 
 [tool.black]
 line-length = 119
+
+[tool.pytest.ini_options]
+pythonpath = "comic_completion"
+testpaths = ["tests"]
+
+[tool.taskipy.tasks]
+test = "poetry run pytest -v"
 
 [build-system]
 requires = ["poetry-core"]
