--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,21 @@
 {
-  "python.testing.pytestArgs": [
-    "tests"
-  ],
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true
+  "python.envFile": "${workspaceFolder}/.env"
+
+  // ===============================================
+  // move to user scope settings.json
+  // ===============================================
+  // // linter
+  // "python.linting.enabled": true,
+  // "python.linting.flake8Enabled": true,
+  // "python.linting.pylintEnabled": false,
+  // "python.linting.pycodestyleEnabled": false,
+
+  // // formatter
+  // "[python]": {
+  //   "editor.defaultFormatter": "ms-python.black-formatter"
+  // },
+  // "python.formatting.provider": "none",
+
+  // // isort
+  // "isort.check": true
 }
